2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Made it a bit more strict where code generator is valid.

2009-09-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateClass/CreateClassCodeGenerator.cs:
	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Fixed "Bug 537927 - "Create" refactorings on member method
	  are broken".

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: Added shortcut
	  key for encapsulate fields command.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.IntegrateTemporaryVariable/IntegrateTemporaryVariableRefactoring.cs:
	  Added integrate temporary variable to translation.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.RefactorImports/SortImportsRefactoring.cs:
	  Fixed bug in sort usings.

2009-09-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.csproj: 

	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Fixed translation of declare local.

2009-09-09  Christian Hergert  <chris@dronelabs.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: 
	* MonoDevelop.Refactoring.IntroduceConstant/IntroduceConstantRefactoring.cs: 
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs: 
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
	  Make dialogs transient for the root window.

2009-09-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.Rename/RenameHandler.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalHandler.cs:
	* MonoDevelop.Refactoring/AbstractRefactoringCommandHandler.cs:
	* MonoDevelop.Refactoring.RefactorImports/RefactorImportsHandler.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  Fixed some issues. Always check with IsValid before calling
	  a refactoring.

2009-09-02  Mike Krüger  <mkrueger@novell.com>
